Camino only - Bug 346772: First item in History search results has all disabled items in context menu. r=smorgan sr=pink